# digitraffic-cdk

./: .editorconfig  .eslintrc.cjs  .eslintrc.json  .git-blame-ignore-revs  .gitattributes  .gitignore  .madgerc  .node-version  .npmrc  .prettierignore  .prettierrc.cjs  .prettierrc.js  .prettierrc.json  ARCHITECTURE.md  CONVENTIONS.md  DEPENDENCY_OVERRIDES.md  DEVELOPMENT.md  Dockerfile  README.md  biome.jsonc  build_all.sh  build_common.sh  build_in.sh  cdk-set-env-status-prod.sh  cdk-set-env-status-test.sh  deno.json  dependabot.yml  init-cdk-project-from-project.sh  init-cdk-project.sh  init-lambda-project-from.sh  init-lambda-project.sh  install_all.sh  install_common.sh  lefthook.yml  lerna.json  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  (+11 more)
.github/: copilot-instructions.md  dependabot.yml  trufflehog-exclude.txt
.husky/: pre-commit
aton-faults-cdk/: cdk.json  env.json  package-lock.json  package.json
rail/data-dump/: .gitignore  build-layer.sh  cdk.json  package.json  pyproject.toml  run_tests.py
rail/data-dump/config/: jest.config.json  rig.json
rail/data-dump/layers/: requirements.txt
rail/data-dump/src/: data-dump-stack.ts  internal-lambdas.ts
rail/data-dump/src/__test__/: data-dump.test.ts
rail/data-dump/src/lambda/dump-compositions/: dump-compositions.py
rail/data-dump/src/lambda/dump-train-locations/: dump-train-locations.py
rail/data-dump/src/lambda/dump-trains/: dump-trains.py
rail/data-dump/src/lambda/tests/: test_dump_compositions.py  test_dump_train_locations.py  test_dump_trains.py
src/: index.ts
(+3562 files in other folders)
