[tool.poetry]
name = "data-dump"
version = "0.0.1"
description = "Rail data-dump Python Lambdas"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
requests = "2.32.5"
aws-lambda-powertools = "3.25.0"

[tool.poetry.group.test.dependencies]
moto = {version = "5.1.22", extras = ["s3"]}
requests-mock = "1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
