[tool.poetry]
name = "data-dump"
version = "0.0.1"
description = "Rail data-dump Python Lambdas"
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = "1.10"

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.33.0"
aws-lambda-powertools = "3.28.0"
# Transitive dependencies of requests
certifi = "2026.2.25"
idna = "3.15"

[tool.poetry.group.test.dependencies]
moto = {version = "5.1.22", extras = ["s3"]}
requests-mock = "1.12.1"
# Transitive dependencies of moto
cryptography = "48.0.1"
boto3 = "1.42.92"
botocore = "1.42.92"
s3transfer = "0.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
